# MyCompiler

./: .gitignore  AGENTS.md  CMakeLists.txt  DOCS.md  Grammar.g  Grammar.tokens  GrammarLexer.c  GrammarLexer.h  GrammarParser.c  GrammarParser.h  README.md  cfg_builder_module.c  cfg_builder_module.h  main.c  methodHard.txt  op_tree.c  op_tree.h  parser_module.c  parser_module.h  target-definitions.pdsl  to_asm_module.c  to_asm_module.h
ast_test_cases/: aa.txt  bb.txt  calc.txt  cc.txt  methodHard1.txt  methodHard2.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test31.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
info/examples/task5/: member_access.txt  overload_and_import.txt
testCases/: methodHard  methodSimple  methodWithBody
test_samples/: fibonacci.txt  interface_class.txt
tests/task5/: run_task5_tests.ps1
tests/task5/inputs/: error_forbidden_override.txt  error_import_call_not_supported.txt  error_missing_interface_impl.txt  valid_inheritance_interface.txt  valid_member_access.txt  valid_overload_and_import_decl.txt
